...
  final _tlController = TextEditingController();
  final List<FocusNode> _focusNodes = [];
  final _jenisKelaminController = TextEditingController();
  final _aktivitasController = TextEditingController();
  final _faktorStressController = TextEditingController();
  final List<String> _stressOptions = [
    'Normal',
    'Demam (per 1°C)',
    'Peritonitis',
    'Cedera Jaringan Lunak Ringan',
    'Cedera Jaringan Lunak Berat',
    'Patah Tulang Multiple Ringan',
    'Patah Tulang Multiple Berat',
...
          tinggiBadan = double.parse(_tinggiBadanController.text);
        } else if (_tlController.text.isNotEmpty &&
            _jenisKelaminController.text.isNotEmpty &&
            usia > 0) {
          // Gunakan rumus estimasi TB dari TL jika TB tidak ada
          final tl = double.parse(_tlController.text);
          if (_jenisKelaminController.text == 'Laki-laki') {
            tinggiBadan = (2.02 * tl) - (0.04 * usia) + 64.19;
          } else {
            tinggiBadan = (1.83 * tl) - (0.24 * usia) + 84.88;
          }
        }

...
          } else if (persentaseKehilangan >= 5) {
            skorKehilanganBB = 1;
          }
        }

        // DIUBAH: Logika skor efek penyakit dari input kehilangan nafsu makan
        final skorEfekPenyakit = (_kehilanganNafsuMakanController.text == 'Ya')
            ? 0
            : 2;

        final totalSkor = skorIMT + skorKehilanganBB + skorEfekPenyakit;

        // 1. Parsing Data Lab & Fisik
...
        onSubmit: _savePatientData,
        resetButtonColor: Colors.white, // Background jadi putih
        resetForegroundColor: const Color.fromARGB(255, 0, 148, 68),
        submitIcon: widget.patient != null
            ? const Icon(Icons.save, color: Colors.white)
            : const Icon(Icons.add, color: Colors.white),
        submitText: widget.patient != null ? 'Simpan' : 'Tambah',
        isLoading: _isLoading,
      ),
      body: SafeArea(
        child: GestureDetector(
          onTap: () {
            FocusScope.of(context).unfocus();
...
                    style: TextStyle(fontSize: 20, fontWeight: FontWeight.bold),
                  ),
                  const SizedBox(height: 20),

                  _buildTextFormField(
                    controller: _noRMController,
                    label: 'No. Rekam Medis (RM)',
                    prefixIcon: const Icon(Icons.medical_information),
                    focusNode: _focusNodes[0],
                    maxLength: 20,
                  ),
                  const SizedBox(height: 16),

                  _buildTextFormField(
                    controller: _namaLengkapController,
                    label: 'Nama Lengkap',
                    prefixIcon: const Icon(Icons.person),
                    focusNode: _focusNodes[1],
                    maxLength: 100,
                  ),
                  const SizedBox(height: 16),

                  _buildTextFormField(
                    controller: _tanggalLahirController,
                    label: 'Tanggal Lahir',
                    readOnly: true,
                    onTap: () => _selectDate(context),
                    prefixIcon: const Icon(Icons.calendar_today),
                    focusNode: _focusNodes[2],
                  ),
                  const SizedBox(height: 16),
...
                    focusNode: _focusNodes[3],
                  ),
                  const SizedBox(height: 16),

                  _buildTextFormField(
                    controller: _diagnosisMedisController,
                    label: 'Diagnosis Medis',
                    prefixIcon: const Icon(Icons.sick),
                    focusNode: _focusNodes[4],
                    maxLength: 500,
                  ),
                  const SizedBox(height: 16),

                  _buildTextFormField(
                    controller: _beratBadanController,
                    label: 'Berat Badan Saat Ini',
                    keyboardType: TextInputType.number,
                    prefixIcon: const Icon(Icons.monitor_weight),
                    focusNode: _focusNodes[5],
                    suffixText: 'kg',
                    validator: (value) {
                      if (value == null || value.isEmpty) {
...
                    },
                  ),
                  const SizedBox(height: 16),
                  // Field untuk Tinggi Badan normal
                  _buildTextFormField(
                    controller: _tinggiBadanController,
                    label: 'Tinggi Badan',
                    keyboardType: TextInputType.number,
                    prefixIcon: const Icon(Icons.height),
                    focusNode: _focusNodes[8],
                    suffixText: 'cm',
                    maxLength: 6,
                    validator: (value) {
...

                  _buildCustomDropdown(
                    controller: _aktivitasController,
                    label: 'Tingkat Aktivitas',
                    prefixIcon: const Icon(Icons.directions_run),
                    items: [
                      'Sangat Jarang',
                      'Aktivitas Ringan',
                      'Aktivitas Sedang',
                      'Aktivitas Berat',
                      'Sangat Aktif',
                    ],
                    focusNode:
...
