...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      backgroundColor: Colors.grey[50],
      appBar: const CustomAppBar(title: 'Daftar Pasien', subtitle: ''),
      body: SafeArea(
        child: FutureBuilder<String?>(
          future: _userRoleFuture,
          builder: (context, snapshot) {
            if (snapshot.connectionState == ConnectionState.waiting) {
              return const Center(child: CircularProgressIndicator());
...
                MaterialPageRoute(builder: (_) => const DataFormAnakPage()),
              );
            },
          ),
          SpeedDialChild(
            child: const Icon(Icons.person),
            label: 'Pasien Dewasa',
            backgroundColor: Colors.blue,
            foregroundColor: Colors.white,
            onTap: () {
              Navigator.push(
                context,
                MaterialPageRoute(builder: (_) => const DataFormPage()),
...
